tests/macros/raw_select/filter.rs
fn main() {
    let q = inquisition::questions![RawSelect { filter: todo!() }];
}
